@@ -1,3 +1,9 @@
+2014-09-16  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/ItkToolbox/elastix_write_param2file.m: (0.2.0)
+
+	- Enable nested transforms.
+
 2014-09-05  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/ItkToolbox/elastix.m: (0.3.1)
